# ConTXT

./: .gitignore  BACKEND.md  DOCUMENTATION.md  FRONTEND.md  Idea.md  PRD.md  README.md  pyproject.toml
.kiro/steering/: product.md  structure.md  tech.md
.taskmaster/: config.json  state.json
Backend/: .env  CONTAINERS.md  Dockerfile  PROCESSORS_MERGED.md  README.md  __init__.py  docker-compose.yml  main.py  requirements.txt  run.py  start_services.sh  test_connections.py  test_docker.sh  test_local.sh  test_merged_processors.py
Backend/agents/: __init__.py  context_builder.py
Backend/api/: __init__.py  routes.py
Backend/app/: __init__.py  main.py
Backend/config/: __init__.py  celery.py  settings.py
Backend/knowledge/: __init__.py  graph.py  schema.py
Backend/plan/: implementation_plan.md  plan.md  summary.md
Backend/processors/: __init__.py  base.py  url_processor.py
Backend/scripts/: create_health_endpoint.py  docker-compose.prod.yml  docker_start.sh  docker_stop.sh  setup_env.sh  test_docker_system.py  validate_env.py
Backend/tests/: __init__.py  test_api.py  test_llm_utils.py
Backend/utils/: __init__.py  llm_utils.py
Extension/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  PRD.md  PROJECT_OVERVIEW.md  README.md  SUMMARY.md  architecture-diagram.md  jest.config.js  package.json  webpack.common.js
Extension/src/: manifest.json  setupTests.ts
Frontend/: package.json  pnpm-lock.yaml
Frontend/app/: globals.css  layout.tsx  page.tsx
Frontend/components/: chat-log-processor.tsx  client-only.tsx  context-viewer.tsx  file-upload.tsx  library-analyzer.tsx  project-context-builder.tsx  source-detail-modal.tsx  system-prompt-generator.tsx  theme-debug.tsx  theme-toggle.tsx  video-processor.tsx  web-url-input.tsx
Frontend/utils/: video-utils.ts
app/core/: worker.py
memory-bank/: projectbrief.md
(+61 files in other folders)
