[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-context-builder"
version = "0.1.0"
description = "AI Context Builder for generating intelligent system prompts"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "LLM Context Builder Team"}
]
dependencies = [
    # Core Framework & Server
    "fastapi>=0.104.0",
    "uvicorn>=0.23.2",
    "gunicorn>=21.2.0",
    "pydantic>=2.4.2",
    "python-dotenv>=1.0.0",
    
    # AI, LLM Orchestration & RAG
    "langchain>=0.0.335",
    "langgraph>=0.0.20",
    "litellm>=1.10.0",
    "tiktoken>=0.5.1",
    "cognee @ git+https://github.com/topoteretes/cognee.git",
    
    # Data & Document Processing
    "unstructured[pdf]>=0.10.30",
    "yt-dlp>=2023.10.13",
    "moviepy>=1.0.3",
    "pandas>=2.1.1",
    "Pillow>=10.1.0",
    "opencv-python>=4.8.1.78",
    "marker-pdf @ git+https://github.com/datalab-to/marker.git",
    
    # Database & Storage
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.1",
    "neo4j>=5.14.0",
    "qdrant-client>=1.6.4",
    
    # Task Queuing
    "celery>=5.3.4",
    "flower>=2.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "black>=23.10.1",
    "isort>=5.12.0",
    "mypy>=1.6.1",
    "flake8>=6.1.0",
    "pre-commit>=3.5.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
